# WCMakeBoilerplate

./: CMakeLists.txt  README.MD  main.c
WLib/: CMakeLists.txt  wlib.c  wlib.h
WLib/cmake/: WLibConfig.cmake.in
